# tbcoin-assets

./: .create-metadata-with-creators.ts  .env  .gitignore  2-create-token-metadata.ts  3-create-token-account.ts  4-mint-tokens.ts  5-transfer-tokens.ts  Anchor.toml  BACKEND_README.md  Cargo.toml  DATABASE.md  METADATA_RUNNER.md  README.md  balance.test.js  blockchain-endpoints.test.js  create-token-mint.ts  create-token-with-metadata-gill.js  create-token-with-metadata-gill.ts  generate-keypair.js  generate-solana-wallet.js  generate-test-wallet.js  get-balance-testnet.js  get-balance.js  get-public-key.js  jest.config.cjs  metadata.json  package-lock.json  package.json  pretty-print-metadata.js  run-create-metadata.js  server.js  tbcoin_metadata.json  tbcoin_token_metadata.json  tsconfig.json  update-metadata.js  verify-metadata.js
.github/chatmodes/: build.chatmode.md
.github/workflows/: node.js.yml  verify-metadata.yml
assets/diagrams/: qmi-architecture.mmd
programs/tbcoin/: Cargo.toml
programs/tbcoin/src/: lib.rs
src/: application.ts  config.ts  contractManager.ts  eventLogger.ts  index.ts  orderManager.ts  server.ts  testSuite.ts  tokenState.ts  types.ts
src/utils/: validation.ts
tests/: server.test.ts
